--- a/details/templates/details/feedbackform.html
+++ b/details/templates/details/feedbackform.html
@@ -1,6 +1,91 @@
 <html>
 <head>
   <style>
+  /* Style the navbar */
+#navbar {
+overflow: hidden;
+background-color: #333;
+}
+
+/* Navbar links */
+#navbar a {
+float: left;
+display: block;
+color: #f2f2f2;
+text-align: center;
+padding: 14px;
+text-decoration: none;
+}
+
+/* Page content */
+.content {
+padding: 16px;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+position: fixed;
+top: 0;
+width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+padding-top: 60px;
+}
+/* Add a black background color to the top navigation bar */
+.navbar {
+overflow: hidden;
+background-color: #e9e9e9;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+float: left;
+display: block;
+color: black;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+background-color: #ddd;
+color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.navbar a.active {
+background-color: #2196F3;
+color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.navbar input[type=text] {
+float: right;
+padding: 6px;
+border: none;
+margin-top: 8px;
+margin-right: 16px;
+font-size: 17px;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+.navbar a, .navbar input[type=text] {
+  float: none;
+  display: block;
+  text-align: left;
+  width: 100%;
+  margin: 0;
+  padding: 14px;
+}
+.navbar input[type=text] {
+  border: 1px solid #ccc;
+}
+}
 body {font-family: Arial, Helvetica, sans-serif;}
 * {box-sizing: border-box;}
 
@@ -36,6 +121,11 @@ input[type=submit]:hover {
 </style>
 </<head>
 <body>
+  <div id="navbar">
+   <a class="active" href="/">Home</a>
+   <a href="/feedback">Contact</a>
+ </div>
+
   <h3>Contact Form</h3>
 
 <div class="container">
@@ -59,5 +149,24 @@ input[type=submit]:hover {
     <a href="success.html"> <button type="button" name="button">Submit</button></a>
   </form>
 </div>
+<script>
+// When the user scrolls the page, execute myFunction
+window.onscroll = function() {myFunction()};
+
+// Get the navbar
+var navbar = document.getElementById("navbar");
+
+// Get the offset position of the navbar
+var sticky = navbar.offsetTop;
+
+// Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
 
 </body>
