IT WORKS AND IS BOOTIFUL

--- a/details/templates/details/artifact_list.html
+++ b/details/templates/details/artifact_list.html
@@ -93,7 +93,7 @@
 }
 </style>
     </head>
-    <body>
+    <body background="/bgimage.jpeg">
       <div id="navbar">
        <a class="active" href="/">Home</a>
        <a href="/feedback">Contact</a>
